# skidpad

./: .gitignore  CMakeLists.txt  README.md  package.xml  path.csv
include/: my_node.hpp  types.hpp  utils.hpp
src/: my_node.cpp  skidpad_path.csv  utils.cpp
